--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,17 @@
 {
+  "name": "@dilo/validation",
+  "description": "A validation library for Deno",
+  "version": "0.0.1",
+  "repository": "https://github.com/dilo/validation",
+  "main": "mod.ts",
   "tasks": {
-    "dev": "deno run --watch main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "test": {
+    "include": [
+      "lib/"
+    ]
   }
 }
