--- a/deno.json
+++ b/deno.json
@@ -2,13 +2,14 @@
   "name": "@dilo/validation",
   "description": "A validation library for Deno",
   "version": "0.0.1",
-  "repository": "https://github.com/dilo/validation",
-  "main": "mod.ts",
+  "repository": "https://github.com/daniel-samson/dilo",
+  "license": "MIT",
   "tasks": {
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
   },
+  "exports": "./mod.ts",
   "test": {
     "include": [
       "lib/"
