--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -10,9 +10,19 @@ name: Deno
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - "main"
+      - "epic*"
+      - "feature*"
+      - "fix*"
+      - "hotfix*"
   pull_request:
-    branches: ["main"]
+    branches:
+      - "main"
+      - "epic*"
+      - "feature*"
+      - "fix*"
+      - "hotfix*"
 
 permissions:
   contents: read
