--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -12,17 +12,17 @@ on:
   push:
     branches:
       - "main"
-      - "epic*"
-      - "feature*"
-      - "fix*"
-      - "hotfix*"
+      - "epic/**"
+      - "feature/**"
+      - "fix/**"
+      - "hotfix/**"
   pull_request:
     branches:
       - "main"
-      - "epic*"
-      - "feature*"
-      - "fix*"
-      - "hotfix*"
+      - "epic/**"
+      - "feature/**"
+      - "fix/**"
+      - "hotfix/**"
 
 permissions:
   contents: read
