--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,8 @@
   "repository": "https://github.com/daniel-samson/dilo",
   "license": "MIT",
   "tasks": {
+    "fmt-check": "deno fmt --check mod.ts lib/**/*.ts",
+    "fmt": "deno fmt mod.ts lib/**/*.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
