--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -40,12 +40,19 @@ jobs:
         with:
           deno-version: v2.x
 
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
+      - name: Verify formatting
+        run: deno fmt --check mod.ts lib/**/*.ts
 
       - name: Run linter
         run: deno lint
 
       - name: Run tests
         run: deno test -A
+
+      - name: Generate coverage report
+        run: deno task lcov
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
