--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -55,4 +55,5 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
+          files: cov.lcov
           token: ${{ secrets.CODECOV_TOKEN }}
