--- a/deno.json
+++ b/deno.json
@@ -7,8 +7,8 @@
   "tasks": {
     "fmt-check": "deno fmt --check mod.ts lib/**/*.ts",
     "fmt": "deno fmt mod.ts lib/**/*.ts",
-    "lcov": "rm -fr coverage && deno test --coverage && deno coverage --lcov --output=cov.lcov",
-    "coverage": "rm -fr coverage && deno test --coverage && deno coverage --lcov --output=cov.lcov && deno coverage --html"
+    "lcov": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov",
+    "coverage-html": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov && deno coverage --html"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
