--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,8 @@
     "fmt-check": "deno fmt --check mod.ts lib/**/*.ts",
     "fmt": "deno fmt mod.ts lib/**/*.ts",
     "lcov": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov",
-    "coverage-html": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov && deno coverage --html"
+    "coverage-html": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov && deno coverage --html",
+    "qa": "deno fmt && deno lint && deno test"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
