--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@danielsamson/dilo",
   "description": "A validation library for Deno",
-  "version": "0.2.0",
+  "version": "0.2.0-alpha.1 ",
   "repository": "https://github.com/daniel-samson/dilo",
   "license": "MIT",
   "tasks": {
@@ -18,6 +18,13 @@
   "test": {
     "include": [
       "lib/"
+    ]
+  },
+  "publish": {
+    "exclude": [
+      "setup-hooks.sh",
+      "scripts/",
+      ".github/"
     ]
   }
 }
