--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@danielsamson/dilo",
   "description": "A validation library for Deno",
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.1",
   "repository": "https://github.com/daniel-samson/dilo",
   "license": "MIT",
   "tasks": {
@@ -9,7 +9,9 @@
     "fmt": "deno fmt mod.ts lib/**/*.ts",
     "lcov": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov",
     "coverage-html": "rm -fr coverage/ && deno test --coverage && deno coverage --lcov --output=cov.lcov && deno coverage --html",
-    "qa": "deno fmt && deno lint && deno test"
+    "qa": "deno fmt && deno lint && deno test",
+    "lint-docs": "deno lint -- --doc lib/**/*.ts",
+    "docs": "deno doc --html lib/**/*.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
