--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "name": "@danielsamson/dilo",
   "description": "A validation library for Deno",
-  "version": "0.3.0-alpha.2",
+  "version": "0.3.0",
   "repository": "https://github.com/daniel-samson/dilo",
   "license": "MIT",
   "tasks": {
